// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LoadingBox matches wrapper loading: wrapper loading 1`] = `
.glamor-15,
[data-glamor-15] {
  position: relative;
  padding-bottom: 2px;
  min-height: 100px;
}

.glamor-14,
[data-glamor-14] {
  position: absolute;
  height: 100%;
  top: 0;
  right: 0;
  left: 0;
  bottom: 0;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
  -webkit-flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -webkit-box-align: center;
  -webkit-align-items: center;
}

.glamor-14 .icon-loading,
[data-glamor-14] .icon-loading {
  z-index: 101;
  opacity: 1;
  display: block;
  max-height: calc(50vh + 100px);
  transition: opacity 800ms ease-in-out;
  -webkit-transition: opacity 800ms ease-in-out;
  -moz-transition: opacity 800ms ease-in-out;
}

.glamor-14 .icon-loading + p,
[data-glamor-14] .icon-loading + p {
  z-index: 101;
  opacity: 1;
  transition: opacity 800ms ease-in-out;
  -webkit-transition: opacity 800ms ease-in-out;
  -moz-transition: opacity 800ms ease-in-out;
}

.glamor-14 .overlay,
[data-glamor-14] .overlay {
  z-index: 100;
  transition: background-color 800ms ease-in-out;
  background-color: rgba(
      255,
      255,
      255,
      0.85);
  -webkit-transition: background-color 800ms ease-in-out;
  -moz-transition: background-color 800ms ease-in-out;
}

.glamor-14.fade-enter .overlay,
[data-glamor-14].fade-enter .overlay {
  background-color: rgba(
        255,
        255,
        255,
        0);
  transition-duration: 800ms;
  -webkit-transition-duration: 800ms;
}

.glamor-14.fade-enter .icon-loading,
[data-glamor-14].fade-enter .icon-loading {
  opacity: 0;
  transition-duration: 800ms;
  transition-delay: 400ms;
  -webkit-transition-duration: 800ms;
  -webkit-transition-delay: 400ms;
}

.glamor-14.fade-enter .icon-loading + p,
[data-glamor-14].fade-enter .icon-loading + p {
  opacity: 0;
  transition-duration: 800ms;
  transition-delay: 400ms;
  -webkit-transition-duration: 800ms;
  -webkit-transition-delay: 400ms;
}

.glamor-14.fade-enter-active .overlay,
[data-glamor-14].fade-enter-active .overlay {
  background-color: rgba(
        255,
        255,
        255,
        0.85);
  transition-duration: 800ms;
  -webkit-transition-duration: 800ms;
}

.glamor-14.fade-enter-active .icon-loading,
[data-glamor-14].fade-enter-active .icon-loading {
  opacity: 1;
  transition-duration: 800ms;
  transition-delay: 400ms;
  -webkit-transition-duration: 800ms;
  -webkit-transition-delay: 400ms;
}

.glamor-14.fade-enter-active .icon-loading + p,
[data-glamor-14].fade-enter-active .icon-loading + p {
  opacity: 1;
  transition-duration: 800ms;
  transition-delay: 400ms;
  -webkit-transition-duration: 800ms;
  -webkit-transition-delay: 400ms;
}

.glamor-14.fade-exit .overlay,
[data-glamor-14].fade-exit .overlay {
  background-color: rgba(
        255,
        255,
        255,
        0.85);
  transition-duration: 200ms;
  -webkit-transition-duration: 200ms;
}

.glamor-14.fade-exit .icon-loading,
[data-glamor-14].fade-exit .icon-loading {
  opacity: 1;
  transition-duration: 200ms;
  -webkit-transition-duration: 200ms;
}

.glamor-14.fade-exit-active .overlay,
[data-glamor-14].fade-exit-active .overlay {
  background-color: rgba(
        255,
        255,
        255,
        0);
  transition-duration: 200ms;
  -webkit-transition-duration: 200ms;
}

.glamor-14.fade-exit-active .icon-loading,
[data-glamor-14].fade-exit-active .icon-loading {
  opacity: 0;
  transition-duration: 200ms;
  -webkit-transition-duration: 200ms;
}

.glamor-14.fade-exit-active .icon-loading + p,
[data-glamor-14].fade-exit-active .icon-loading + p {
  opacity: 0;
  transition-duration: 200ms;
  -webkit-transition-duration: 200ms;
}

.glamor-0,
[data-glamor-0] {
  animation: animation_1kzvbmm 1s infinite linear;
  -webkit-animation: animation_1kzvbmm 1s infinite linear;
}

.glamor-12,
[data-glamor-12] {
  font-family: "nta", Arial, sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.1428571429;
  color: #0b0c0c;
  background-color: rgba(255,255,255,0.7);
  box-shadow: 0 0 3px #ffffff;
  margin: 0;
  z-index: 101;
}

.glamor-13,
[data-glamor-13] {
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  overflow: hidden;
  height: 100%;
  width: 100%;
}

@media only screen and (min-width: 641px) {
  .glamor-12,
  [data-glamor-12] {
    font-size: 16px;
    line-height: 1.25;
  }
}

<LoadingBox
  backgroundColor="#ffffff"
  backgroundColorOpacity={0.85}
  loading={true}
  spinnerColor="#0b0c0c"
  timeIn={800}
  timeOut={200}
>
  <glamorous(div)>
    <div
      className="glamor-15"
    >
      <CSSTransition
        classNames="fade"
        in={true}
        timeout={200}
        unmountOnExit={true}
      >
        <Transition
          appear={false}
          enter={true}
          exit={true}
          in={true}
          mountOnEnter={false}
          onEnter={[Function]}
          onEntered={[Function]}
          onEntering={[Function]}
          onExit={[Function]}
          onExited={[Function]}
          onExiting={[Function]}
          timeout={200}
          unmountOnExit={true}
        >
          <glamorous(div)
            backgroundColor="#ffffff"
            backgroundColorOpacity={0.85}
            loading={true}
            timeIn={800}
            timeOut={200}
          >
            <div
              className="glamor-14"
            >
              <Spinner
                className="icon-loading"
                fill="#0b0c0c"
                height="100px"
                title="Loading"
                width="100px"
              >
                <SVG
                  className="icon-loading"
                  fill="#0b0c0c"
                  height="100px"
                  preserveAspectRatio="xMidYMid meet"
                  title="Loading"
                  viewBox="-50 -50 100 100"
                  width="100px"
                >
                  <svg
                    className="icon-loading"
                    fill="#0b0c0c"
                    height="100px"
                    preserveAspectRatio="xMidYMid meet"
                    style={
                      Object {
                        "display": "block",
                      }
                    }
                    version="1.1"
                    viewBox="-50 -50 100 100"
                    width="100px"
                    x="0px"
                    xmlns="http://www.w3.org/2000/svg"
                    y="0px"
                  >
                    <title>
                      Loading
                    </title>
                    <glamorous(rect)
                      fill="#0b0c0c"
                      height="5"
                      key="0"
                      opacity="0"
                      rx="2.5"
                      ry="2.5"
                      style={
                        Object {
                          "animationDelay": "0ms",
                        }
                      }
                      transform="rotate(0, 0, 2) translate(10 0)"
                      width="12"
                    >
                      <rect
                        className="glamor-0"
                        fill="#0b0c0c"
                        height="5"
                        opacity="0"
                        rx="2.5"
                        ry="2.5"
                        style={
                          Object {
                            "animationDelay": "0ms",
                          }
                        }
                        transform="rotate(0, 0, 2) translate(10 0)"
                        width="12"
                      />
                    </glamorous(rect)>
                    <glamorous(rect)
                      fill="#0b0c0c"
                      height="5"
                      key="1"
                      opacity="0"
                      rx="2.5"
                      ry="2.5"
                      style={
                        Object {
                          "animationDelay": "83ms",
                        }
                      }
                      transform="rotate(30, 0, 2) translate(10 0)"
                      width="12"
                    >
                      <rect
                        className="glamor-0"
                        fill="#0b0c0c"
                        height="5"
                        opacity="0"
                        rx="2.5"
                        ry="2.5"
                        style={
                          Object {
                            "animationDelay": "83ms",
                          }
                        }
                        transform="rotate(30, 0, 2) translate(10 0)"
                        width="12"
                      />
                    </glamorous(rect)>
                    <glamorous(rect)
                      fill="#0b0c0c"
                      height="5"
                      key="2"
                      opacity="0"
                      rx="2.5"
                      ry="2.5"
                      style={
                        Object {
                          "animationDelay": "166ms",
                        }
                      }
                      transform="rotate(60, 0, 2) translate(10 0)"
                      width="12"
                    >
                      <rect
                        className="glamor-0"
                        fill="#0b0c0c"
                        height="5"
                        opacity="0"
                        rx="2.5"
                        ry="2.5"
                        style={
                          Object {
                            "animationDelay": "166ms",
                          }
                        }
                        transform="rotate(60, 0, 2) translate(10 0)"
                        width="12"
                      />
                    </glamorous(rect)>
                    <glamorous(rect)
                      fill="#0b0c0c"
                      height="5"
                      key="3"
                      opacity="0"
                      rx="2.5"
                      ry="2.5"
                      style={
                        Object {
                          "animationDelay": "249ms",
                        }
                      }
                      transform="rotate(90, 0, 2) translate(10 0)"
                      width="12"
                    >
                      <rect
                        className="glamor-0"
                        fill="#0b0c0c"
                        height="5"
                        opacity="0"
                        rx="2.5"
                        ry="2.5"
                        style={
                          Object {
                            "animationDelay": "249ms",
                          }
                        }
                        transform="rotate(90, 0, 2) translate(10 0)"
                        width="12"
                      />
                    </glamorous(rect)>
                    <glamorous(rect)
                      fill="#0b0c0c"
                      height="5"
                      key="4"
                      opacity="0"
                      rx="2.5"
                      ry="2.5"
                      style={
                        Object {
                          "animationDelay": "332ms",
                        }
                      }
                      transform="rotate(120, 0, 2) translate(10 0)"
                      width="12"
                    >
                      <rect
                        className="glamor-0"
                        fill="#0b0c0c"
                        height="5"
                        opacity="0"
                        rx="2.5"
                        ry="2.5"
                        style={
                          Object {
                            "animationDelay": "332ms",
                          }
                        }
                        transform="rotate(120, 0, 2) translate(10 0)"
                        width="12"
                      />
                    </glamorous(rect)>
                    <glamorous(rect)
                      fill="#0b0c0c"
                      height="5"
                      key="5"
                      opacity="0"
                      rx="2.5"
                      ry="2.5"
                      style={
                        Object {
                          "animationDelay": "415ms",
                        }
                      }
                      transform="rotate(150, 0, 2) translate(10 0)"
                      width="12"
                    >
                      <rect
                        className="glamor-0"
                        fill="#0b0c0c"
                        height="5"
                        opacity="0"
                        rx="2.5"
                        ry="2.5"
                        style={
                          Object {
                            "animationDelay": "415ms",
                          }
                        }
                        transform="rotate(150, 0, 2) translate(10 0)"
                        width="12"
                      />
                    </glamorous(rect)>
                    <glamorous(rect)
                      fill="#0b0c0c"
                      height="5"
                      key="6"
                      opacity="0"
                      rx="2.5"
                      ry="2.5"
                      style={
                        Object {
                          "animationDelay": "498ms",
                        }
                      }
                      transform="rotate(180, 0, 2) translate(10 0)"
                      width="12"
                    >
                      <rect
                        className="glamor-0"
                        fill="#0b0c0c"
                        height="5"
                        opacity="0"
                        rx="2.5"
                        ry="2.5"
                        style={
                          Object {
                            "animationDelay": "498ms",
                          }
                        }
                        transform="rotate(180, 0, 2) translate(10 0)"
                        width="12"
                      />
                    </glamorous(rect)>
                    <glamorous(rect)
                      fill="#0b0c0c"
                      height="5"
                      key="7"
                      opacity="0"
                      rx="2.5"
                      ry="2.5"
                      style={
                        Object {
                          "animationDelay": "581ms",
                        }
                      }
                      transform="rotate(210, 0, 2) translate(10 0)"
                      width="12"
                    >
                      <rect
                        className="glamor-0"
                        fill="#0b0c0c"
                        height="5"
                        opacity="0"
                        rx="2.5"
                        ry="2.5"
                        style={
                          Object {
                            "animationDelay": "581ms",
                          }
                        }
                        transform="rotate(210, 0, 2) translate(10 0)"
                        width="12"
                      />
                    </glamorous(rect)>
                    <glamorous(rect)
                      fill="#0b0c0c"
                      height="5"
                      key="8"
                      opacity="0"
                      rx="2.5"
                      ry="2.5"
                      style={
                        Object {
                          "animationDelay": "664ms",
                        }
                      }
                      transform="rotate(240, 0, 2) translate(10 0)"
                      width="12"
                    >
                      <rect
                        className="glamor-0"
                        fill="#0b0c0c"
                        height="5"
                        opacity="0"
                        rx="2.5"
                        ry="2.5"
                        style={
                          Object {
                            "animationDelay": "664ms",
                          }
                        }
                        transform="rotate(240, 0, 2) translate(10 0)"
                        width="12"
                      />
                    </glamorous(rect)>
                    <glamorous(rect)
                      fill="#0b0c0c"
                      height="5"
                      key="9"
                      opacity="0"
                      rx="2.5"
                      ry="2.5"
                      style={
                        Object {
                          "animationDelay": "747ms",
                        }
                      }
                      transform="rotate(270, 0, 2) translate(10 0)"
                      width="12"
                    >
                      <rect
                        className="glamor-0"
                        fill="#0b0c0c"
                        height="5"
                        opacity="0"
                        rx="2.5"
                        ry="2.5"
                        style={
                          Object {
                            "animationDelay": "747ms",
                          }
                        }
                        transform="rotate(270, 0, 2) translate(10 0)"
                        width="12"
                      />
                    </glamorous(rect)>
                    <glamorous(rect)
                      fill="#0b0c0c"
                      height="5"
                      key="10"
                      opacity="0"
                      rx="2.5"
                      ry="2.5"
                      style={
                        Object {
                          "animationDelay": "830ms",
                        }
                      }
                      transform="rotate(300, 0, 2) translate(10 0)"
                      width="12"
                    >
                      <rect
                        className="glamor-0"
                        fill="#0b0c0c"
                        height="5"
                        opacity="0"
                        rx="2.5"
                        ry="2.5"
                        style={
                          Object {
                            "animationDelay": "830ms",
                          }
                        }
                        transform="rotate(300, 0, 2) translate(10 0)"
                        width="12"
                      />
                    </glamorous(rect)>
                    <glamorous(rect)
                      fill="#0b0c0c"
                      height="5"
                      key="11"
                      opacity="0"
                      rx="2.5"
                      ry="2.5"
                      style={
                        Object {
                          "animationDelay": "913ms",
                        }
                      }
                      transform="rotate(330, 0, 2) translate(10 0)"
                      width="12"
                    >
                      <rect
                        className="glamor-0"
                        fill="#0b0c0c"
                        height="5"
                        opacity="0"
                        rx="2.5"
                        ry="2.5"
                        style={
                          Object {
                            "animationDelay": "913ms",
                          }
                        }
                        transform="rotate(330, 0, 2) translate(10 0)"
                        width="12"
                      />
                    </glamorous(rect)>
                  </svg>
                </SVG>
              </Spinner>
              <glamorous(p)>
                <p
                  className="glamor-12"
                />
              </glamorous(p)>
              <glamorous(div)>
                <div
                  className="glamor-13 overlay"
                />
              </glamorous(div)>
            </div>
          </glamorous(div)>
        </Transition>
      </CSSTransition>
      example
    </div>
  </glamorous(div)>
</LoadingBox>
`;

exports[`LoadingBox matches wrapper loading: wrapper loading 2`] = `
.glamor-15,
[data-glamor-15] {
  position: relative;
  padding-bottom: 2px;
  min-height: 100px;
}

.glamor-14,
[data-glamor-14] {
  position: absolute;
  height: 100%;
  top: 0;
  right: 0;
  left: 0;
  bottom: 0;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
  -webkit-flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -webkit-box-align: center;
  -webkit-align-items: center;
}

.glamor-14 .icon-loading,
[data-glamor-14] .icon-loading {
  z-index: 101;
  opacity: 1;
  display: block;
  max-height: calc(50vh + 100px);
  transition: opacity 800ms ease-in-out;
  -webkit-transition: opacity 800ms ease-in-out;
  -moz-transition: opacity 800ms ease-in-out;
}

.glamor-14 .icon-loading + p,
[data-glamor-14] .icon-loading + p {
  z-index: 101;
  opacity: 1;
  transition: opacity 800ms ease-in-out;
  -webkit-transition: opacity 800ms ease-in-out;
  -moz-transition: opacity 800ms ease-in-out;
}

.glamor-14 .overlay,
[data-glamor-14] .overlay {
  z-index: 100;
  transition: background-color 800ms ease-in-out;
  background-color: rgba(
      255,
      255,
      255,
      0.85);
  -webkit-transition: background-color 800ms ease-in-out;
  -moz-transition: background-color 800ms ease-in-out;
}

.glamor-14.fade-enter .overlay,
[data-glamor-14].fade-enter .overlay {
  background-color: rgba(
        255,
        255,
        255,
        0);
  transition-duration: 800ms;
  -webkit-transition-duration: 800ms;
}

.glamor-14.fade-enter .icon-loading,
[data-glamor-14].fade-enter .icon-loading {
  opacity: 0;
  transition-duration: 800ms;
  transition-delay: 400ms;
  -webkit-transition-duration: 800ms;
  -webkit-transition-delay: 400ms;
}

.glamor-14.fade-enter .icon-loading + p,
[data-glamor-14].fade-enter .icon-loading + p {
  opacity: 0;
  transition-duration: 800ms;
  transition-delay: 400ms;
  -webkit-transition-duration: 800ms;
  -webkit-transition-delay: 400ms;
}

.glamor-14.fade-enter-active .overlay,
[data-glamor-14].fade-enter-active .overlay {
  background-color: rgba(
        255,
        255,
        255,
        0.85);
  transition-duration: 800ms;
  -webkit-transition-duration: 800ms;
}

.glamor-14.fade-enter-active .icon-loading,
[data-glamor-14].fade-enter-active .icon-loading {
  opacity: 1;
  transition-duration: 800ms;
  transition-delay: 400ms;
  -webkit-transition-duration: 800ms;
  -webkit-transition-delay: 400ms;
}

.glamor-14.fade-enter-active .icon-loading + p,
[data-glamor-14].fade-enter-active .icon-loading + p {
  opacity: 1;
  transition-duration: 800ms;
  transition-delay: 400ms;
  -webkit-transition-duration: 800ms;
  -webkit-transition-delay: 400ms;
}

.glamor-14.fade-exit .overlay,
[data-glamor-14].fade-exit .overlay {
  background-color: rgba(
        255,
        255,
        255,
        0.85);
  transition-duration: 200ms;
  -webkit-transition-duration: 200ms;
}

.glamor-14.fade-exit .icon-loading,
[data-glamor-14].fade-exit .icon-loading {
  opacity: 1;
  transition-duration: 200ms;
  -webkit-transition-duration: 200ms;
}

.glamor-14.fade-exit-active .overlay,
[data-glamor-14].fade-exit-active .overlay {
  background-color: rgba(
        255,
        255,
        255,
        0);
  transition-duration: 200ms;
  -webkit-transition-duration: 200ms;
}

.glamor-14.fade-exit-active .icon-loading,
[data-glamor-14].fade-exit-active .icon-loading {
  opacity: 0;
  transition-duration: 200ms;
  -webkit-transition-duration: 200ms;
}

.glamor-14.fade-exit-active .icon-loading + p,
[data-glamor-14].fade-exit-active .icon-loading + p {
  opacity: 0;
  transition-duration: 200ms;
  -webkit-transition-duration: 200ms;
}

.glamor-0,
[data-glamor-0] {
  animation: animation_1kzvbmm 1s infinite linear;
  -webkit-animation: animation_1kzvbmm 1s infinite linear;
}

.glamor-12,
[data-glamor-12] {
  font-family: "nta", Arial, sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.1428571429;
  color: #0b0c0c;
  background-color: rgba(255,255,255,0.7);
  box-shadow: 0 0 3px #ffffff;
  margin: 0;
  z-index: 101;
}

.glamor-13,
[data-glamor-13] {
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  overflow: hidden;
  height: 100%;
  width: 100%;
}

@media only screen and (min-width: 641px) {
  .glamor-12,
  [data-glamor-12] {
    font-size: 16px;
    line-height: 1.25;
  }
}

<LoadingBox
  backgroundColor="#ffffff"
  backgroundColorOpacity={0.85}
  labelPosition="right"
  loading={true}
  spinnerColor="#0b0c0c"
  timeIn={800}
  timeOut={200}
>
  <glamorous(div)>
    <div
      className="glamor-15"
    >
      <CSSTransition
        classNames="fade"
        in={true}
        timeout={200}
        unmountOnExit={true}
      >
        <Transition
          appear={false}
          enter={true}
          exit={true}
          in={true}
          mountOnEnter={false}
          onEnter={[Function]}
          onEntered={[Function]}
          onEntering={[Function]}
          onExit={[Function]}
          onExited={[Function]}
          onExiting={[Function]}
          timeout={200}
          unmountOnExit={true}
        >
          <glamorous(div)
            backgroundColor="#ffffff"
            backgroundColorOpacity={0.85}
            labelPosition="right"
            loading={true}
            timeIn={800}
            timeOut={200}
          >
            <div
              className="glamor-14"
            >
              <Spinner
                className="icon-loading"
                fill="#0b0c0c"
                height="100px"
                title="Loading"
                width="100px"
              >
                <SVG
                  className="icon-loading"
                  fill="#0b0c0c"
                  height="100px"
                  preserveAspectRatio="xMidYMid meet"
                  title="Loading"
                  viewBox="-50 -50 100 100"
                  width="100px"
                >
                  <svg
                    className="icon-loading"
                    fill="#0b0c0c"
                    height="100px"
                    preserveAspectRatio="xMidYMid meet"
                    style={
                      Object {
                        "display": "block",
                      }
                    }
                    version="1.1"
                    viewBox="-50 -50 100 100"
                    width="100px"
                    x="0px"
                    xmlns="http://www.w3.org/2000/svg"
                    y="0px"
                  >
                    <title>
                      Loading
                    </title>
                    <glamorous(rect)
                      fill="#0b0c0c"
                      height="5"
                      key="0"
                      opacity="0"
                      rx="2.5"
                      ry="2.5"
                      style={
                        Object {
                          "animationDelay": "0ms",
                        }
                      }
                      transform="rotate(0, 0, 2) translate(10 0)"
                      width="12"
                    >
                      <rect
                        className="glamor-0"
                        fill="#0b0c0c"
                        height="5"
                        opacity="0"
                        rx="2.5"
                        ry="2.5"
                        style={
                          Object {
                            "animationDelay": "0ms",
                          }
                        }
                        transform="rotate(0, 0, 2) translate(10 0)"
                        width="12"
                      />
                    </glamorous(rect)>
                    <glamorous(rect)
                      fill="#0b0c0c"
                      height="5"
                      key="1"
                      opacity="0"
                      rx="2.5"
                      ry="2.5"
                      style={
                        Object {
                          "animationDelay": "83ms",
                        }
                      }
                      transform="rotate(30, 0, 2) translate(10 0)"
                      width="12"
                    >
                      <rect
                        className="glamor-0"
                        fill="#0b0c0c"
                        height="5"
                        opacity="0"
                        rx="2.5"
                        ry="2.5"
                        style={
                          Object {
                            "animationDelay": "83ms",
                          }
                        }
                        transform="rotate(30, 0, 2) translate(10 0)"
                        width="12"
                      />
                    </glamorous(rect)>
                    <glamorous(rect)
                      fill="#0b0c0c"
                      height="5"
                      key="2"
                      opacity="0"
                      rx="2.5"
                      ry="2.5"
                      style={
                        Object {
                          "animationDelay": "166ms",
                        }
                      }
                      transform="rotate(60, 0, 2) translate(10 0)"
                      width="12"
                    >
                      <rect
                        className="glamor-0"
                        fill="#0b0c0c"
                        height="5"
                        opacity="0"
                        rx="2.5"
                        ry="2.5"
                        style={
                          Object {
                            "animationDelay": "166ms",
                          }
                        }
                        transform="rotate(60, 0, 2) translate(10 0)"
                        width="12"
                      />
                    </glamorous(rect)>
                    <glamorous(rect)
                      fill="#0b0c0c"
                      height="5"
                      key="3"
                      opacity="0"
                      rx="2.5"
                      ry="2.5"
                      style={
                        Object {
                          "animationDelay": "249ms",
                        }
                      }
                      transform="rotate(90, 0, 2) translate(10 0)"
                      width="12"
                    >
                      <rect
                        className="glamor-0"
                        fill="#0b0c0c"
                        height="5"
                        opacity="0"
                        rx="2.5"
                        ry="2.5"
                        style={
                          Object {
                            "animationDelay": "249ms",
                          }
                        }
                        transform="rotate(90, 0, 2) translate(10 0)"
                        width="12"
                      />
                    </glamorous(rect)>
                    <glamorous(rect)
                      fill="#0b0c0c"
                      height="5"
                      key="4"
                      opacity="0"
                      rx="2.5"
                      ry="2.5"
                      style={
                        Object {
                          "animationDelay": "332ms",
                        }
                      }
                      transform="rotate(120, 0, 2) translate(10 0)"
                      width="12"
                    >
                      <rect
                        className="glamor-0"
                        fill="#0b0c0c"
                        height="5"
                        opacity="0"
                        rx="2.5"
                        ry="2.5"
                        style={
                          Object {
                            "animationDelay": "332ms",
                          }
                        }
                        transform="rotate(120, 0, 2) translate(10 0)"
                        width="12"
                      />
                    </glamorous(rect)>
                    <glamorous(rect)
                      fill="#0b0c0c"
                      height="5"
                      key="5"
                      opacity="0"
                      rx="2.5"
                      ry="2.5"
                      style={
                        Object {
                          "animationDelay": "415ms",
                        }
                      }
                      transform="rotate(150, 0, 2) translate(10 0)"
                      width="12"
                    >
                      <rect
                        className="glamor-0"
                        fill="#0b0c0c"
                        height="5"
                        opacity="0"
                        rx="2.5"
                        ry="2.5"
                        style={
                          Object {
                            "animationDelay": "415ms",
                          }
                        }
                        transform="rotate(150, 0, 2) translate(10 0)"
                        width="12"
                      />
                    </glamorous(rect)>
                    <glamorous(rect)
                      fill="#0b0c0c"
                      height="5"
                      key="6"
                      opacity="0"
                      rx="2.5"
                      ry="2.5"
                      style={
                        Object {
                          "animationDelay": "498ms",
                        }
                      }
                      transform="rotate(180, 0, 2) translate(10 0)"
                      width="12"
                    >
                      <rect
                        className="glamor-0"
                        fill="#0b0c0c"
                        height="5"
                        opacity="0"
                        rx="2.5"
                        ry="2.5"
                        style={
                          Object {
                            "animationDelay": "498ms",
                          }
                        }
                        transform="rotate(180, 0, 2) translate(10 0)"
                        width="12"
                      />
                    </glamorous(rect)>
                    <glamorous(rect)
                      fill="#0b0c0c"
                      height="5"
                      key="7"
                      opacity="0"
                      rx="2.5"
                      ry="2.5"
                      style={
                        Object {
                          "animationDelay": "581ms",
                        }
                      }
                      transform="rotate(210, 0, 2) translate(10 0)"
                      width="12"
                    >
                      <rect
                        className="glamor-0"
                        fill="#0b0c0c"
                        height="5"
                        opacity="0"
                        rx="2.5"
                        ry="2.5"
                        style={
                          Object {
                            "animationDelay": "581ms",
                          }
                        }
                        transform="rotate(210, 0, 2) translate(10 0)"
                        width="12"
                      />
                    </glamorous(rect)>
                    <glamorous(rect)
                      fill="#0b0c0c"
                      height="5"
                      key="8"
                      opacity="0"
                      rx="2.5"
                      ry="2.5"
                      style={
                        Object {
                          "animationDelay": "664ms",
                        }
                      }
                      transform="rotate(240, 0, 2) translate(10 0)"
                      width="12"
                    >
                      <rect
                        className="glamor-0"
                        fill="#0b0c0c"
                        height="5"
                        opacity="0"
                        rx="2.5"
                        ry="2.5"
                        style={
                          Object {
                            "animationDelay": "664ms",
                          }
                        }
                        transform="rotate(240, 0, 2) translate(10 0)"
                        width="12"
                      />
                    </glamorous(rect)>
                    <glamorous(rect)
                      fill="#0b0c0c"
                      height="5"
                      key="9"
                      opacity="0"
                      rx="2.5"
                      ry="2.5"
                      style={
                        Object {
                          "animationDelay": "747ms",
                        }
                      }
                      transform="rotate(270, 0, 2) translate(10 0)"
                      width="12"
                    >
                      <rect
                        className="glamor-0"
                        fill="#0b0c0c"
                        height="5"
                        opacity="0"
                        rx="2.5"
                        ry="2.5"
                        style={
                          Object {
                            "animationDelay": "747ms",
                          }
                        }
                        transform="rotate(270, 0, 2) translate(10 0)"
                        width="12"
                      />
                    </glamorous(rect)>
                    <glamorous(rect)
                      fill="#0b0c0c"
                      height="5"
                      key="10"
                      opacity="0"
                      rx="2.5"
                      ry="2.5"
                      style={
                        Object {
                          "animationDelay": "830ms",
                        }
                      }
                      transform="rotate(300, 0, 2) translate(10 0)"
                      width="12"
                    >
                      <rect
                        className="glamor-0"
                        fill="#0b0c0c"
                        height="5"
                        opacity="0"
                        rx="2.5"
                        ry="2.5"
                        style={
                          Object {
                            "animationDelay": "830ms",
                          }
                        }
                        transform="rotate(300, 0, 2) translate(10 0)"
                        width="12"
                      />
                    </glamorous(rect)>
                    <glamorous(rect)
                      fill="#0b0c0c"
                      height="5"
                      key="11"
                      opacity="0"
                      rx="2.5"
                      ry="2.5"
                      style={
                        Object {
                          "animationDelay": "913ms",
                        }
                      }
                      transform="rotate(330, 0, 2) translate(10 0)"
                      width="12"
                    >
                      <rect
                        className="glamor-0"
                        fill="#0b0c0c"
                        height="5"
                        opacity="0"
                        rx="2.5"
                        ry="2.5"
                        style={
                          Object {
                            "animationDelay": "913ms",
                          }
                        }
                        transform="rotate(330, 0, 2) translate(10 0)"
                        width="12"
                      />
                    </glamorous(rect)>
                  </svg>
                </SVG>
              </Spinner>
              <glamorous(p)>
                <p
                  className="glamor-12"
                />
              </glamorous(p)>
              <glamorous(div)>
                <div
                  className="glamor-13 overlay"
                />
              </glamorous(div)>
            </div>
          </glamorous(div)>
        </Transition>
      </CSSTransition>
      example
    </div>
  </glamorous(div)>
</LoadingBox>
`;
